Add an end point for an example#7

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.data.mongodb.database=Mahallem
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 server.port=8081
 
-server.servlet.context-path=/api/gamer
+server.servlet.context-path=/api/v1
 
 # Root logger option
 log4j.rootLogger=INFO, stdout
