--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,12 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>3.2.0</version>
+		</dependency>
+
 
 
 	</dependencies>
