--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,26 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1} - %m%n
+
+
+# Whether to always apply the MessageFormat rules, parsing even messages without arguments.
+spring.messages.always-use-message-format=false
+
+# Comma-separated list of basenames
+spring.messages.basename=messages
+
+# Loaded resource bundle files cache duration.
+# When not set, bundles are cached forever.
+# If a duration suffix is not specified, seconds will be used.
+spring.messages.cache-duration=
+
+# Message bundles encoding.
+spring.messages.encoding=UTF-8
+
+# Whether to fall back to the system Locale
+# if no files for a specific Locale have been found.
+spring.messages.fallback-to-system-locale=true
+
+# Whether to use the message code as the default message instead of throwing a "NoSuchMessageException".
+# Recommended during development only.
+spring.messages.use-code-as-default-message=false
