--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 language: java
 jdk: oraclejdk11
 script:
-- "./mvnw clean install -B"
-- mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=guvense_Mahallem-Backend
+  - ./mvnw clean install -B
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=guvense_Mahallem-Backend
 sudo: required
 services:
 - docker
 addons:
   sonarcloud:
-    organization: guvense
+    organization: "guvense"
     token:
       secure: $SONAR_TOKEN
 after_success:
