--- a/DOCKERFILE
+++ b/DOCKERFILE
@@ -1,38 +1,7 @@
-FROM azul/zulu-openjdk-alpine:11 as packager
-
-RUN { \
-java --version ; \
-echo "jlink version:" && \
-jlink --version ; \
-}
-
-ENV JAVA_MINIMAL=/opt/jre
-
-  # build modules distribution
-RUN jlink \
---verbose \
---add-modules \
-java.base,java.sql,java.naming,java.desktop,java.management,java.security.jgss,java.instrument \
-  # java.naming - javax/naming/NamingException
-  # java.desktop - java/beans/PropertyEditorSupport
-  # java.management - javax/management/MBeanServer
-  # java.security.jgss - org/ietf/jgss/GSSException
-  # java.instrument - java/lang/instrument/IllegalClassFormatException
---compress 2 \
---strip-debug \
---no-header-files \
---no-man-pages \
---output "$JAVA_MINIMAL"
-
-  # Second stage, add only our minimal "JRE" distr and our app
-FROM alpine
-
-ENV JAVA_MINIMAL=/opt/jre
-ENV PATH="$PATH:$JAVA_MINIMAL/bin"
-
-COPY --from=packager "$JAVA_MINIMAL" "$JAVA_MINIMAL"
-COPY "target/mahallem-0.0.1-SNAPSHOT.jar" "/app.jar"
-
-EXPOSE 8080
-CMD [ "-jar", "/app.jar" ]
-ENTRYPOINT [ "java" ]
+FROM frolvlad/alpine-oraclejdk8:slim
+VOLUME /tmp
+ADD target/mahallem-0.0.1-SNAPSHOT.jar app.jar
+RUN sh -c 'touch /app.jar'
+ENV JAVA_OPTS="-Xdebug -Xrunjdwp:server=y,transport=dt_socket,address=8787,suspend=n"
+EXPOSE 8080 8787
+ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -Dspring.profiles.active=docker -jar /app.jar" ]
