Redis pub-sub implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.database=Mahallem
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 server.port=8081
-logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
+#logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
+logging.level.org.springframework.data.redis.core.RedisTemplate=DEBUG
 spring.redis.host=localhost
 spring.redis.port=6379
 server.servlet.context-path=/api/v1
