--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,3 +40,4 @@ spring.messages.fallback-to-system-locale=true
 # Whether to use the message code as the default message instead of throwing a "NoSuchMessageException".
 # Recommended during development only.
 spring.messages.use-code-as-default-message=false
+spring.jackson.property-naming-strategy=SNAKE_CASE
