--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,10 @@
 					<target>11</target>
 				</configuration>
 			</plugin>
-
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
 		</plugins>
 	</build>
 	<dependencies>
