--- a/pom.xml
+++ b/pom.xml
@@ -54,10 +54,8 @@
 					<output>file</output>
 					<append>true</append>
 					<excludes>
-						<exclude>**/entity/**</exclude>
-						<exclude>**/exception/**</exclude>
-						<exclude>**/config/**</exclude>
-						<exclude>**/dto/**</exclude>
+						<exclude>**/model/*</exclude>
+						<exclude>**/exception/*</exclude>
 					</excludes>
 				</configuration>
 			</plugin>
@@ -65,13 +63,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>11</source>
-					<target>11</target>
+					<source>8</source>
+					<target>8</target>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
