--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,7 @@ services:
 addons:
   sonarcloud:
     organization: guvense
-    token:
-      secure: $SONAR_TOKEN
+    token: $SONAR_TOKEN
 after_success:
 - echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin  
 - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH;
