--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ addons:
     organization: guvense
     token: $SONAR_TOKEN
 after_success:
+- bash <(curl -s https://codecov.io/bash)
 - echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin  
 - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH;
   fi`
