--- a/pom.xml
+++ b/pom.xml
@@ -18,14 +18,19 @@
 		<sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
 		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
 		<sonar.language>java</sonar.language>
-		<sonar.exclusions>**/entity/**,**/dto/**,**/config/**,
+		<sonar.exclusions>
+			**/entity/**,
+			**/dto/**,
+			**/viewmodel/**,
             **/config/**,
             **/constants/**,
             **/controller/**,
             **/eventbusses/**,
             **/eventhandler/**,
             **/eventsender/**,
-            **/util/**
+            **/util/**,
+			**/repository/**,
+
 
         </sonar.exclusions>
 		<sonar.projectVersion>${project.version}</sonar.projectVersion>
@@ -64,14 +69,18 @@
 					<append>true</append>
 					<excludes>
 						<exclude>**/entity/*</exclude>
-						<exclude>**/exception/*</exclude>
-                        <exclude>**/constants/*</exclude>
-                        <exclude>**/controller/*</exclude>
-                        <exclude>**/dto/*</exclude>
-                        <exclude>**/eventbusses/*</exclude>
-                        <exclude>**/eventhandler/*</exclude>
-                        <exclude>**/eventsender/*</exclude>
-                        <exclude>**/util/*</exclude>
+						<exclude>**/exception/**</exclude>
+                        <exclude>**/constants/**</exclude>
+                        <exclude>**/controller/**</exclude>
+                        <exclude>**/dto/**</exclude>
+                        <exclude>**/eventbusses/**</exclude>
+                        <exclude>**/eventhandler/**</exclude>
+                        <exclude>**/eventsender/**</exclude>
+                        <exclude>**/util/**</exclude>
+						<exclude>**/viewmodel/**</exclude>
+						<exclude>**/repository/**</exclude>
+						<exclude>**/customize/**</exclude>
+						<exclude>**/config/**</exclude>
 
 					</excludes>
 				</configuration>
