--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,10 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.database=Mahallem
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 server.port=8081
+server.ssl.key-store=keystore.p12
+server.ssl.key-store-password=100545460
+server.ssl.key-alias=sslcert
+server.http2.enabled=true
 #logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 logging.level.org.springframework.data.redis.core.RedisTemplate=DEBUG
 spring.redis.host=localhost
@@ -41,3 +45,6 @@ spring.messages.fallback-to-system-locale=true
 # Recommended during development only.
 spring.messages.use-code-as-default-message=false
 spring.jackson.property-naming-strategy=SNAKE_CASE
+
+
+app.version = 1.0.0
