--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ hub/node_modules/*
 hub/dist/*
 frontend/node_modules/*
 frontend/package-lock.json
+keystore.p12
 ### STS ###
 .apt_generated
 .classpath
