--- a/travis/.travis.yml
+++ b/travis/.travis.yml
@@ -3,7 +3,7 @@ jdk: oraclejdk11
 install:
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 script:
-- echo -e "$KEY_PASS\n$KEY_PASS\n$KEY_PASS\n$KEY_PASS" | keytool -genkey -alias sslcert -storetype PKCS12 -keyalg RSA -keysize 2048 -keystore keystore.p12 -validity 3650 -name "CN=Mahallem, OU=mah, O=mah, L=mah, ST=mah,C=TR"
+- ./generate_cert.sh
 - mvn clean install -B
 - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=guvense_Mahallem-Backend
 sudo: required
