--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
                 <configuration>
                     <appName>mahallem</appName>
                     <processTypes>
-                        <web>java $JAVA_OPTS -jar -Dserver.port=$PORT ${full-artifact-name}</web>
+                        <web>java $JAVA_OPTS -jar -Dserver.port=8081 ${full-artifact-name}</web>
                     </processTypes>
                 </configuration>
             </plugin>
