--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
                 <artifactId>heroku-maven-plugin</artifactId>
                 <version>2.0.11</version>
                 <configuration>
-                    <appName>heroku-jar-deploy</appName>
+                    <appName>mahallem</appName>
                     <includeTarget>false</includeTarget>
                     <includes>
                         <include>${basedir}/${full-artifact-name}</include>
