--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
 
     <properties>
+        <java.version>11</java.version>
         <full-artifact-name>target/${project.artifactId}-${project.version}.jar</full-artifact-name>
         <sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
         <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
@@ -54,7 +55,6 @@
                     <includes>
                         <include>${basedir}/${full-artifact-name}</include>
                     </includes>
-                    <jdkVersion>1.11</jdkVersion>
                     <processTypes>
                         <web>java -jar ${full-artifact-name}</web>
                     </processTypes>
