--- a/.travis.yml
+++ b/.travis.yml
@@ -31,9 +31,9 @@ deploy:
   api_key: $HEROKU_API_KEY
   script:
     - wget -qO- https://toolbelt.heroku.com/install.sh | sh
-    - echo "$HEROKU_PASSWORD" | docker login -u "$HEROKU_USERNAME" --password-stdin registry.heroku.com
+    - heroku container:login
     - docker push $IMAGE_NAME
-   
+
   on:
     branch: master
 env:
