--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ deploy:
   api_key: $HEROKU_API_KEY
   script:
     - wget -qO- https://toolbelt.heroku.com/install.sh | sh
+    - heroku login
     - heroku container:login
     - docker tag $IMAGE_NAME registry.heroku.com/mahallem/web
     - docker push registry.heroku.com/mahallem/web
