--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,17 @@
 language: java
 jdk: oraclejdk11
+before_install:
+  - sudo sh -c 'echo "deb https://apt.dockerproject.org/repo ubuntu-trusty main" > /etc/apt/sources.list.d/docker.list'
+  - sudo apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D
+  - sudo apt-get update
+  - sudo apt-key update
+  - sudo apt-get install -qqy --force-yes linux-image-extra-$(uname -r) apparmor
+  - sudo apt-get install -qqy --force-yes -o Dpkg::Options::="--force-confdef" -o Dpkg::Options::="--force-confold" docker-engine=${DOCKER_ENGINE_VERSION}\*
+  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+  - chmod +x docker-compose
+  - sudo mv docker-compose /usr/local/bin
+  - docker --version
+  - docker-compose --version
 install:
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 script:
@@ -19,7 +31,8 @@ after_success:
 - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH;
   fi`
 - export IMAGE_NAME=guvense/mahallem_api
-- docker build -t $IMAGE_NAME:$COMMIT .
+- sh set_pass.sh
+- docker-compose build
 - docker tag $IMAGE_NAME:$COMMIT $IMAGE_NAME:$TAG
 - docker push $IMAGE_NAME
 - export IMAGE_NAME_HUB=guvense/mahallem_hub
