--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,10 @@
 version: "3.2"
 services:
-   redis:
-       image: "redis:alpine"
-       ports:
-         - "6379:6379"
-       volumes:
-               - redis_data:/data      
-   mongodb:
-       image: mongo:latest
-       ports:
-         - "27017:27017"
-       volumes:
-         - mongo_data:/data/db
-      
-   elasticsearch:
-       image: docker.elastic.co/elasticsearch/elasticsearch:7.6.2
-       environment:
-               - discovery.type=single-node
-               - ES_JAVA_OPTS= -Xms512m -Xmx512m
-               - bootstrap.memory_lock=true
-               - transport.publish_port=9300
-               - network.publish_host=localhost
-       ports:
-          - "9200:9200"
-          - "9300:9300"
-       volumes:
-          - els_data:/usr/share/elasticsearch/data  
-                       
- 
-volumes:
-     mongo_data: 
-        driver: local
-     els_data:
-        driver: local
-     redis_data:
-        driver: local      
-
-
+  mahallem_api:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    environment:
+      - redis_pass=${REDIS_PASS}
+      - mongodb_pass=${MONGODB_PASS}
+    image: $IMAGE_NAME
