--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -10,3 +10,6 @@ spring:
     host: ec2-34-254-83-127.eu-west-1.compute.amazonaws.com
     port: 8869
     password: ${redis_pass}
+
+server:
+  port: ${PORT}
