conflict is fixed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,11 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.database=Mahallem
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 server.port=8081
-#server.ssl.key-store=keystore.p12
-#server.ssl.key-store-password=100545460
-#server.ssl.key-alias=sslcert
-#server.http2.enabled=true
-#logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
+server.ssl.key-store=keystore.p12
+server.ssl.key-store-password=100545460
+server.ssl.key-alias=sslcert
+server.http2.enabled=true
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 logging.level.org.springframework.data.redis.core.RedisTemplate=DEBUG
 spring.redis.host=localhost
 spring.redis.port=6379
