--- a/.travis.yml
+++ b/.travis.yml
@@ -28,12 +28,7 @@ after_success:
 - docker build -t $IMAGE_NAME_HUB:$COMMIT -f DockerfileHub .
 - docker tag $IMAGE_NAME_HUB:$COMMIT $IMAGE_NAME_HUB:$TAG
 - docker push $IMAGE_NAME_HUB
-- wget -qO- https://toolbelt.heroku.com/install.sh | sh
-- heroku auth:token
-- heroku container:login
-- docker tag $IMAGE_NAME registry.heroku.com/mahallem/web
-- docker push registry.heroku.com/mahallem/web
-- heroku container:release web -a mahallem
+- export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then sh deploy.sh; fi`
 env:
   global:
   - COMMIT=${TRAVIS_COMMIT::7}
