--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,7 +1,8 @@
-username.not.blank=Username can not be blank
-first.name.not.blank=First name can not be blank
-last.name.not.blank=Last name can not be blank
-password.not.blank=Password can not be blank
+username.not.blank=Username can not be empty
+first.name.not.blank=First name can not be empty
+last.name.not.blank=Last name can not be empty
+password.not.blank=Password can not be empty
+email.not.blank=Email can not be empty
 sex.notnull=Sex can not be null
 age.notnull=Age can not be null
 age.should.be.greater=Age should be greater than 18
